style: fixed border overflow on card component

--- a/frontend/src/css/Card.css
+++ b/frontend/src/css/Card.css
@@ -9,10 +9,10 @@ html { margin:0; padding:0; }
 }
 
 iframe {
-    background-color: #e5e5e5ff;
+    background-color: #0f1b35;
     border-width: 0;
-    height: 500px;
     border-radius: 10px;
+    overflow: hidden;
     width: 100%;
     height: 100%;
     pointer-events: none;
